@@ -1,5 +1,5 @@
 <Type Name="MovementStep" FullName="Gtk.MovementStep">
-  <TypeSignature Language="C#" Value="public sealed struct MovementStep;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct MovementStep;" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>To be added</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An enumeration used by Label.</summary>
+    <remarks>
+     <para>
+      This enumeration is used by <see cref="T:Gtk.Label"/> to decide how the cursor will move.
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +38,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move by forward/back graphemes.</summary>
+        <remarks>
+         <para>
+          The cursor will move by forward/back graphemes.
+         </para> 
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="VisualPositions">
@@ -46,8 +54,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move by left/right graphemes.</summary>
+        <remarks>
+        <para>
+         The cursor will move by left/right graphemes.
+        </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Words">
@@ -58,8 +70,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move by forward/back words.</summary>
+        <remarks>
+         <para>
+          The cursor will move by forward/back words.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="DisplayLines">
@@ -70,8 +86,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move up/down lines (wrapped lines).</summary>
+        <remarks>
+        <para>
+         The cursor will move up/down lines (wrapped lines).
+        </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="DisplayLineEnds">
@@ -82,8 +102,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move up/down lines (wrapped lines).</summary>
+        <remarks>
+        <para>
+         The cursor will move up/down lines (wrapped lines).
+        </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Paragraphs">
@@ -94,8 +118,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move up/down paragraphs (newline-ended lines).</summary>
+        <remarks>
+        <para>
+         The cursor will move up/down paragraphs (newline-ended lines).
+        </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="ParagraphEnds">
@@ -106,8 +134,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move to either end of a paragraph.</summary>
+        <remarks>
+         <para>
+          The cursor will move to either end of a paragraph.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Pages">
@@ -118,8 +150,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move by pages.</summary>
+        <remarks>
+         <para>
+          The cursor will move by pages.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="BufferEnds">
@@ -130,8 +166,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cursor will move to the end of the buffer.</summary>
+        <remarks>
+         <para>
+          The cursor will move to the end of the buffer.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
@@ -142,7 +182,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Move horizontally by pages</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
