@@ -1,5 +1,5 @@
 <Type Name="ResizeMode" FullName="Gtk.ResizeMode">
-  <TypeSignature Language="C#" Value="public sealed struct ResizeMode;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct ResizeMode;" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>To be added</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An enumeration used by Container</summary>
+    <remarks>
+     <para>
+      This enumeration is used by <see cref="T:Gtk.Container"/> to decide how resize behaves.
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +38,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Resize request is sent to the parent.</summary>
+        <remarks>
+         <para>
+          Resize request is sent to the parent.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Queue">
@@ -46,8 +54,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Queue resizes are sent to the widget.</summary>
+        <remarks>
+         <para>
+          Queue resizes are sent to the widget.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Immediate">
@@ -58,8 +70,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Perform the resizes now.</summary>
+        <remarks>
+         <para>
+          Perform the resizes now.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
