@@ -1,5 +1,5 @@
 <Type Name="StateType" FullName="Gtk.StateType">
-  <TypeSignature Language="C#" Value="public sealed struct StateType;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct StateType;" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,15 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>To be added</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An enumeration used by Style.</summary>
+    <remarks>
+     <para>
+      This enumeration is used to indicate the current state of a widget; the state determines how the widget is draw.
+     </para>
+     <para>
+      This enumeration is also used to identify different colors in a <see cref="T:Gtk.Style"/> for drawing, so states can be used for subparts of a widget as well as entire widgets.
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +41,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>State during normal operation.</summary>
+        <remarks>
+         <para>
+          State during normal operation.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Active">
@@ -46,8 +57,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>State of a currently active widget, such as a depressed button.</summary>
+        <remarks>
+         <para>
+          State of a currently active widget, such as a depressed button.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Prelight">
@@ -58,8 +73,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>State indicating that the mouse pointer is over the widget and the widget will respond to mouse clicks.</summary>
+        <remarks>
+         <para>
+          State indicating that the mouse pointer is over the widget and the widget will respond to mouse clicks.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Selected">
@@ -70,8 +89,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>State of a selected item, such the selected row in a list.</summary>
+        <remarks>
+         <para>
+          State of a selected item, such the selected row in a list.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Insensitive">
@@ -82,8 +105,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>State indicating that the widget is unresponsive to user actions.</summary>
+        <remarks>
+         <para>
+          State indicating that the widget is unresponsive to user actions.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
