@@ -1,5 +1,5 @@
 <Type Name="ToolbarStyle" FullName="Gtk.ToolbarStyle">
-  <TypeSignature Language="C#" Value="public sealed struct ToolbarStyle;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct ToolbarStyle;" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>To be added</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An enumeration used by Toolbar</summary>
+    <remarks>
+     <para>
+      This enumeration is used by <see cref="T:Gtk.Toolbar"/> to customize it's appearance. Note that setting the toolbar overrides the user's preferences for the default toolbar style.
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +38,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Buttons display only icons in the toolbar.</summary>
+        <remarks>
+         <para>
+          Buttons display only icons in the toolbar.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Text">
@@ -46,8 +54,10 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Buttons display only text labels in the toolbar.</summary>
+        <remarks>
+         Buttons display only text labels in the toolbar.
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Both">
@@ -58,8 +68,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Buttons display text and icons in the toolbar.</summary>
+        <remarks>
+         <para>
+          Buttons display text and icons in the toolbar.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="BothHoriz">
@@ -70,8 +84,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Buttons display icons and text alongside each other, rather than vertically stacked.</summary>
+        <remarks>
+         <para>
+          Buttons display icons and text alongside each other, rather than vertically stacked.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
