@@ -1,5 +1,11 @@
 2003-02-22  Duncan Mak  <duncan@ximian.com>
 
+	* en/Gtk/MovementStep.xml: 
+	* en/Gtk/ResizeMode.xml:
+	* en/Gtk/StateType.xml:
+	* en/Gtk/ToolbarStyle.xml: More from Hector, the Mexican
+	documentation phenomenon!
+
 	* en/Gtk/HSeparator.xml:  Hector Gomez.
 
 	* en/Gtk/DeleteType.xml:  Kevin Breit, with edits.
